# Iago

./: CMakeLists.txt  Iago.cpp  Iago.h  bitboard.h  board.cpp  board.h  main.cpp  types.h
